[package]
name = "fc-cli"
description = "CLI utilities for Firecracker SDK runtime operations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
firecracker = { workspace = true, features = ["bundled-runtime"] }
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
libc = "0.2"
